--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,7 +25,8 @@
     "dev:api": "pnpm --filter api start:dev",
     "dev:web": "pnpm --filter web dev",
     "db:push": "pnpm prisma db push",
-    "db:studio": "pnpm prisma studio"
+    "db:studio": "pnpm prisma studio",
+    "db:populate": "pnpm studio.tsx"
   },
   "dependencies": {
     "@nestjs/bullmq": "^11.0.4",
