--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,7 +26,7 @@
     "dev:web": "pnpm --filter web dev",
     "db:push": "pnpm prisma db push",
     "db:studio": "pnpm prisma studio",
-    "db:populate": "pnpm studio.tsx"
+    "db:populate": "pnpm tsx script.ts"
   },
   "dependencies": {
     "@nestjs/bullmq": "^11.0.4",
