--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     volumes:
       - ./apps/web:/app
       - /app/node_modules
+    environment:
+      SERVER_URL: http://api:3001
 
   api:
     build:
