--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,7 +27,8 @@
     "db:push": "pnpm prisma db push",
     "db:studio": "pnpm prisma studio",
     "db:populate": "pnpm tsx script.ts",
-    "db:seed:dev": "docker exec -it api pnpm prisma:generate && docker exec -it api pnpm prisma:migrate && docker exec -it api pnpm db:populate"
+    "db:seed:dev": "docker exec -it api pnpm prisma:generate && docker exec -it api pnpm prisma:migrate && docker exec -it api pnpm db:populate",
+    "db:reset:dev": "docker exec -it api pnpm prisma migrate reset"
   },
   "dependencies": {
     "@nestjs/bullmq": "^11.0.4",
