--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,10 @@ services:
       CORS_ORIGIN: "http://localhost:3000"
       DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/ecommerce"
 
+      REDIS_HOST: "redis"
+      REDIS_PORT: "6379"
+      REDIS_PASSWORD: ""
+      REDIS_URL: "redis://redis:6379"
   postgres:
     image: postgres:15
     ports:
