--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       REDIS_PORT: "6379"
       REDIS_PASSWORD: ""
       REDIS_URL: "redis://redis:6379"
+      FRONTEND_URL: "http://localhost:3000"
   postgres:
     image: postgres:15
     ports:
