--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write .",
     "lint": "pnpm -r lint",
-    "build": "pnpm -r build"
+    "build": "pnpm -r build",
+    "build:project": "concurrently -k -n DOCKER,STRIPE -c cyan,magenta \"docker compose up\" \"wait-on tcp:localhost:3001 && stripe listen --forward-to localhost:3001/webhooks/stripe\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.15.0",
   "devDependencies": {
-    "prettier": "latest"
+    "concurrently": "^9.2.1",
+    "prettier": "latest",
+    "wait-on": "^9.0.3"
   }
 }
