--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "format": "prettier --write .",
     "lint": "pnpm -r lint",
     "build": "pnpm -r build",
-    "run:dev": "concurrently -k -n DOCKER,STRIPE -c cyan,magenta \"docker compose up\" \"wait-on tcp:localhost:3001 && stripe listen --forward-to localhost:3001/webhooks/stripe\""
+    "docker:up": "docker compose up",
+    "stripe:listen": "wait-on tcp:localhost:3001 && stripe listen --forward-to=http://localhost:3001/webhooks/stripe",
+    "run:dev": "concurrently -k -n DOCKER,STRIPE -c cyan,magenta npm:docker:up npm:stripe:listen"
   },
   "keywords": [],
   "author": "",
