--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -37,12 +37,15 @@
     "@nestjs/core": "^11.1.11",
     "@nestjs/jwt": "^11.0.2",
     "@nestjs/platform-express": "^11.1.11",
+    "@nestjs/schedule": "^6.1.0",
     "@nestjs/throttler": "^6.5.0",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "@types/cron": "^2.4.3",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.66.4",
     "cookie-parser": "^1.4.7",
+    "cron": "^4.4.0",
     "dotenv": "^17.2.3",
     "ioredis": "^5.8.2",
     "nodemailer": "^7.0.12",
